Stop losing the reason an AI call failed
The OpenAI and DeepSeek branches of GenerarListadoService.generar() each
catch HttpStatusCodeException and turn the status into something the
admin can act on. The Anthropic branch had no try/catch at all, and
CargaJsonController finished the job with a catch (Exception) that
logged nothing.

The result, on 2026-09-11: Anthropic returned 400 because a usage limit
was reached, the admin read "Revisá la conexión o la configuración de
IA", and Railway's logs were empty. The one fact that would have
explained it — Anthropic's own error message — was thrown away twice.

Anthropic reports an exhausted balance or a spend cap as 400, not 402
like DeepSeek, so those are matched on the text of error.message, which
is also repeated back verbatim: it says more than any wording of ours.

Both endpoints now log before responding — warn with the reason for the
503, error with the stack for the 502. No behaviour changes for a call
that succeeds, and no quota is restored: this only makes the failure
legible.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>