@@ -3,18 +3,22 @@
 ## Stack
 - **Backend:** Java 21 + Spring Boot 3.3 + Spring Security + JWT + JPA/Hibernate + Flyway + PostgreSQL 16
 - **Frontend:** React 18 + Vite + React Router + axios + Context auth | **JSX (no TypeScript)**
-- **AI:** Claude Haiku 4.5 (`claude-haiku-4-5-20251001`) — clasificación de categorías + búsqueda de imágenes. **Opcional:** sin `ANTHROPIC_API_KEY` las dos degradan solas (la clasificación deja `categoria_id` en null para corregir a mano en Admin → Productos; las imágenes caen a Icecat). El parsing de listas de precios con IA **se eliminó** (2026-07-31): lo reemplazó "Cargar por JSON", que no consume API.
+- **AI:** tres usos — generar listados de catálogo desde texto/Notion, clasificar categorías (último recurso, después de `ClasificadorPorNombre`) y buscar imágenes. El proveedor se elige con `CATALOGO_IA_PROVIDER` (`anthropic` | `openai` | `deepseek`), **uno solo y sin fallback automático**: un fallback duplicaría el gasto en silencio. **Producción corre con `deepseek`** desde 2026-09-11 (Anthropic sin cuota hasta el 2026-10-01, OpenAI sin créditos). Todo degrada solo si no hay clave: la clasificación deja `categoria_id` en null para corregir a mano en Admin → Productos. Para imágenes, ver el bullet propio más abajo: no todos los proveedores sirven.
 - **Exchange rate:** dolarapi.com dólar oficial (cacheado en memoria)
-- **Deploy:** Railway, push a `main` = auto-deploy (~2-3 min) | URL: `https://futuratecno-production.up.railway.app`
+- **Deploy:** Railway, push a `main` = auto-deploy (~90 s – 3 min) | URL: `https://www.futuratecno.com.ar` (la de Railway, `https://futuratecno-production.up.railway.app`, sigue viva)
 
 ## Arquitectura no obvia
 - **Frontend embebido en el jar:** Vite buildea a `backend/src/main/resources/static/` → mismo origen que el backend → sin CORS. El `Dockerfile` hace el build del frontend primero.
 - **Sin Lombok:** se rompió bajo Java 25 durante el desarrollo → getters/setters explícitos en todas las entidades. No agregar Lombok.
-- **Flyway activo (`ddl-auto=validate`):** las migraciones van en `backend/src/main/resources/db/migration/` (ya hay V1–V6). Cualquier cambio de schema necesita un archivo `V7__...sql` nuevo. **No cambiar a `ddl-auto=update`.**
+- **Flyway activo (`ddl-auto=validate`):** las migraciones van en `backend/src/main/resources/db/migration/` (ya hay **V1–V34**; la próxima libre es **V35**). Cualquier cambio de schema necesita un archivo nuevo. **No cambiar a `ddl-auto=update`.**
 - **Fórmula de precios:** `(costo USD) × (1 + flete%) × (1 + margen%)` — el flete es **porcentaje por proveedor**, no monto fijo. Defaults: flete 5%, margen 15%.
 - **Soft delete:** `activo=false` en `Producto` y `Variante`. Nunca borrar físicamente.
 - **Imagen por PRODUCTO** (no por variante): `Producto.imagenUrl`. Una sola imagen por producto independientemente de cuántas variantes tenga.
 - **MercadoLibre bloquea scraping server-side** → cualquier request no-browser devuelve 302 a "suspicious-traffic". Las imágenes ML no se pueden auto-obtener. Flujo manual: Admin → Imágenes → "🔍 Buscar" abre Google Images → el usuario copia la URL de la imagen → la pega → preview → Guardar.
+- **Búsqueda de imágenes: hay DOS caminos distintos y no hacen lo mismo.** Admin → Imágenes (`ProductoAdminService#buscarImagenesFaltantes`) recorre una cascada de cuatro fuentes: **Icecat → Google CSE → DuckDuckGo → Anthropic**. El panel Cargar JSON (`GenerarListadoService#imagen`) consulta **una sola**: Anthropic, u OpenAI si `CATALOGO_IA_PROVIDER=openai`. **DeepSeek no tiene búsqueda web alojada**, así que con el proveedor actual el generador cae igual en Anthropic. Estado al 2026-09-13: **el generador no encuentra ninguna imagen** — Anthropic sin cuota (400), OpenAI sin créditos (429), Icecat y Google sin variables en Railway, DuckDuckGo sin credenciales pero rechazó la prueba desde la Mac (no probado desde Railway). Unificar el generador con la cascada de cuatro es la forma de arreglarlo **sin depender de cuotas**.
+- **Memoria por marca+modelo (V31–V34):** cuatro tablas con la misma clave (`marca`, `modelo` normalizados a minúsculas y espacios colapsados) para que el trabajo manual sobreviva a un reimport y se comparta entre proveedores: `imagenes_manuales` (V31), `imagenes_automaticas` (V32), `descripciones_manuales` (V33) y `atributos_manuales` (V34: categoría + peso/dimensiones). Dos detalles que no se deducen del código:
+  - **La "descripción" es `Variante.especificaciones`** — no existe columna `descripcion` en `Producto`.
+  - **V33 EXCLUYE Elit/Invid** a propósito (reescriben su ficha en cada sync, recordarla taparía la descripción propia); **V34 los INCLUYE**, porque ningún mayorista trae peso ni dimensiones y una medida real es cierta venga de donde venga. V34 además **solo rellena huecos**, nunca pisa un dato cargado.
 - **Sincronización automática diaria:** `SincronizacionScheduler` a las 06:30 AR (configurable con `SYNC_CRON`). Modo "solo existentes": actualiza precio/stock de productos ya importados, no crea nuevos.
 - **Mayoristas modulares:** cada distribuidor tiene su propio `ApiClient` + `ImportService` + `Controller`. Elit y Invid conviven sin pisarse. Dedup por `codigo_externo` + `fuente`.
 - **Railway bloquea la salida SMTP** (puertos 25/465/587, política antispam) → los mails **no** pueden ir por SMTP. Un intento contra `smtp.gmail.com` no falla con error de credenciales: cuelga y muere en `ConnectException: Connection timed out`, porque nunca llega a autenticar. Por eso `EmailService` manda por la **API HTTP de Resend** (443). Cualquier integración saliente nueva: verificar que no dependa de un puerto no-HTTP.
@@ -29,6 +33,7 @@
 - **Peso/dimensiones para envío (V14):** `Producto` tiene `pesoGramos`/`altoCm`/`anchoCm`/`largoCm` opcionales (override real, se edita en Admin → Productos). Si están en `null`, hay que resolver por el default de `Categoria` (mismos 4 campos con sufijo `_default`): primero la subcategoría (hoja), si no tiene, la categoría padre. Ningún mayorista (Elit/Invid) ni Icecat con el plan actual traen este dato — confirmado pegándole a la API de Icecat en vivo, el plan da `GeneralInfo`/`Gallery` pero no `FeaturesGroups` (ahí vive el peso). Los defaults por categoría se cargaron a mano en la V14 y solo se editan por SQL directo, no hay UI para eso todavía.
 - **Envío por Andreani (V15):** la cotización sale de la **API Pyme** (`woocommerce-api-acom.andreani.com`), que es el middleware del plugin de WooCommerce — **no** la API corporativa (`apis.andreani.com`, esa exige contrato comercial y nunca la conseguimos). Es la única vía para una cuenta Pyme, pero Andreani podría cambiarla sin avisar: por eso `AndreaniClient` degrada con gracia y el checkout funciona igual sin cotización. Auth: la credencial del portal (Integraciones → WooCommerce) va tal cual en `Authorization` a `POST /api/v1/Login`; la respuesta trae el `accessToken` (header `X-Auth-Token` de ahí en más) **y los contratos de la cuenta** — no hace falta conocer `cliente` ni `contrato`, los devuelve la API. Cotización: `POST /api/v1/Pyme/rates` con `{postal_code_origin, postal_code_destination, products[{quantity, price, dimensions{width,height,depth,grams}}]}`. Exige los 4 datos de peso/dimensiones de cada producto (de ahí la V14); si falta alguno no se cotiza. La modalidad "sucursal" viene repetida una vez por punto de retiro del CP → hay que quedarse con el mínimo por modalidad.
 - **El costo de envío también se congela.** Mismo criterio que los precios: el checkout manda solo CP + modalidad, `PedidoService` **recotiza server-side** y guarda el importe. Si Andreani no responde en ese momento, el pedido igual se crea con `costo_envio_ars` en null ("a cotizar") — la cotización nunca bloquea una venta.
+- **La home (`/`) es la TIENDA**, desde 2026-09-13. El sorteo se mudó a `/sorteo` y `/inicio` redirige ahí. El banner del sorteo en la landing **se apaga solo el 30/09**, cuando cierra la inscripción. El gate `SoloAdmin` que escondía el catálogo **ya no existe** (venció el 7/9, eliminado en `d9f04cf`): el catálogo es público.
 - **Repo público en GitHub** — NUNCA commitear secrets. Las credenciales van solo en `backend/.env` (gitignored) y en Railway.
 
 ## Límites conocidos (escalabilidad)
@@ -36,6 +41,7 @@ Medido el 2026-07-31 con **1.545 productos activos**. Nada de esto está roto ho
 - **N+1 del catálogo — resuelto (2026-08-02).** `CatalogoService` y `ProductoAdminService` hacían una query de variantes (y el catálogo, además, de imágenes) **por producto**: con 1.545 productos, ~3.100 queries por request y `GET /api/productos` en 9-14 s. Se cambió a `findByProductoIdInAndActivo` / `findByProductoIdInAndActivoOrderByOrden` (una sola consulta con `IN` para todo el catálogo) + agrupar por producto en memoria (`Collectors.groupingBy`). Bajó a un puñado de queries totales, sin importar cuántos productos haya. Si en algún momento vuelve a sentirse lento, revisar que ningún código nuevo haya vuelto a meter una consulta dentro del loop de productos.
 - **La paginación del catálogo es falsa.** `GET /api/productos` **acepta pero ignora** `page` y `size`: siempre devuelve todo (1 MB, 162 KB con gzip) y el frontend pagina de a 24 en el navegador. Ojo al medir: pedir páginas en un bucle devuelve la misma lista repetida (así conté 36.783 productos que en realidad eran 1.545 × 24).
 - **El buscador del admin filtra en el cliente** (`ProductosPage`), sobre el listado completo que ya viene cargado. A este volumen es instantáneo; si el catálogo crece un orden de magnitud hay que pasarlo a server-side junto con la paginación.
+- **Un error de IA nunca debe llegar mudo.** Las tres ramas de `GenerarListadoService.generar()` atrapan `HttpStatusCodeException` y traducen el código a un mensaje accionable, y `CargaJsonController` **loguea antes de responder** (`warn` para el 503, `error` con stack para el 502). Vino de un caso real: Anthropic devolvió 400 por tope de uso, el admin leyó "Revisá la conexión o la configuración de IA" y los logs de Railway quedaron vacíos — la rama de Anthropic era la única sin `try/catch` y el `catch (Exception)` del controller no escribía nada. **Al agregar un proveedor nuevo, copiar las dos mitades del patrón.** Detalle del mapeo de Anthropic: el saldo agotado y el tope de gasto llegan como **400**, no como 402, así que se detectan por el texto del `error.message`, que además se repite al admin tal cual (dice más que cualquier texto propio).
 - **Clasificación de categorías sin IA (`ClasificadorPorNombre`).** El vocabulario de categorías de Elit no calza con el árbol, y como el último recurso del clasificador era Claude (sin crédito), el 60% del catálogo quedaba con `categoria_id` en null — y sin categoría no se resuelve el peso, así que esos productos **no cotizan envío** (peor: `EnvioService` corta la cotización del **carrito entero** si un solo ítem no resuelve medidas). Se resuelve por reglas sobre el nombre, antes de la IA. **Clave: mira solo las primeras 4 palabras del modelo**, donde el mayorista pone el tipo de producto; el resto son especificaciones que mienten ("Procesador ... con Cooler" no es un cooler). Medido: leer el nombre entero da 31% de errores, leer el encabezado lo baja a 7%. La subcategoría sí usa el texto completo (chipset, Hz, si un switch es administrable). Ante la duda devuelve null a propósito: mal categorizado hereda un peso equivocado y cotiza mal sin que nadie se entere. Hay un test contra un volcado del catálogo real: `mvn test -Dtest=ClasificadorPorNombreCatalogoRealTest -Dcatalogo=/ruta/catalogo.json`.
 
 ## Convenciones
@@ -62,14 +68,27 @@ cd frontend && npm run dev          # → http://localhost:5173
 - DB: `jdbc:postgresql://localhost:5433/futuratecno_db` | user: `futuratecno` | pass: `futuratecno`
 - Admin: definido en `.env` con `ADMIN_EMAIL` / `ADMIN_PASSWORD`
 
+**Tests con Java moderno:** la Mac de desarrollo tiene Java 26 y Byte Buddy (Mockito) todavía no lo soporta oficialmente. Correrlos así:
+```bash
+mvn -f backend/pom.xml -Dnet.bytebuddy.experimental=true test
+```
+(al 2026-09-13: 56 tests, 1 skipped, 0 fallas)
+
 ## Prod (Railway)
 | Env var | Descripción |
 |---|---|
 | `SPRING_DATASOURCE_URL/USERNAME/PASSWORD` | PostgreSQL managed (usar variables de Railway `${{Postgres.*}}`) |
 | `JWT_SECRET` | Clave JWT |
 | `ADMIN_EMAIL` / `ADMIN_PASSWORD` | Admin inicial |
-| `ANTHROPIC_API_KEY` | Claude API para clasificar categorías y buscar imágenes. Vacía = las dos degradan solas, el resto del sistema anda igual. |
+| `CATALOGO_IA_PROVIDER` | Proveedor de generación de listados: `anthropic` \| `openai` \| `deepseek` (default `anthropic`). **Hoy en prod: `deepseek`.** Sin fallback automático entre proveedores. |
+| `ANTHROPIC_API_KEY` | Claude API para clasificar categorías y buscar imágenes. Vacía = las dos degradan solas, el resto del sistema anda igual. **Al 2026-09-13 la clave está pero sin cuota (400) hasta el 2026-10-01.** |
 | `ANTHROPIC_MODEL` | Modelo IA (default: `claude-haiku-4-5-20251001`) |
+| `OPENAI_API_KEY` / `OPENAI_MODEL` | Alternativa vía API de Responses (default `gpt-4.1-mini`). Es el **único** proveedor con búsqueda web alojada para imágenes en el generador. Al 2026-09-13: sin créditos (429 `insufficient_quota`). |
+| `DEEPSEEK_API_KEY` / `DEEPSEEK_MODEL` | Chat Completions compatible con OpenAI (default `deepseek-chat`). **Sin búsqueda web**: sirve para generar listados, no para imágenes. Probado OK. |
+| `ICECAT_USERNAME` / `ICECAT_API_TOKEN` / `ICECAT_CONTENT_TOKEN` | Primera fuente de la cascada de imágenes del admin. **No definidas en Railway** → esa fuente está apagada. |
+| `GOOGLE_API_KEY` / `GOOGLE_CX` | Google Custom Search para imágenes (2ª de la cascada). **No definidas en Railway** → apagada. Ojo: son distintas de `GOOGLE_CLIENT_ID`, que es el login. |
+| `MERCADOPAGO_ACCESS_TOKEN` / `MERCADOPAGO_WEBHOOK_SECRET` / `MERCADOPAGO_TEST_MODE` | Cobros con Mercado Pago (V26/V27). |
+| `NOTION_TOKEN` / `NOTION_PAGE_ID` | Origen de los borradores de catálogo desde Notion. |
 | `SYNC_ENABLED` / `SYNC_CRON` | Sync automática (default: 06:30 AR) |
 | `ELIT_USER_ID` / `ELIT_TOKEN` | Credenciales mayorista Elit |
 | `INVID_BASE_URL` | Host de Invid/TornadoStore |
@@ -80,6 +99,12 @@ cd frontend && npm run dev          # → http://localhost:5173
 | `ANDREANI_HASH` | Credencial de la cuenta Pyme de Andreani (portal → Integraciones → WooCommerce). Vacía = sin cotización de envío (el checkout sigue andando). |
 | `ANDREANI_CP_ORIGEN` | Código postal de despacho (origen de toda cotización). |
 
+**Verificar un deploy (el MCP de Railway no sirve):** el MCP devuelve `Unauthorized`, pero la **CLI está logueada**. El deploy vivo es el único `SUCCESS`; comparar su `meta.commitHash` con el HEAD local — nunca dar un deploy por hecho sin mirarlo.
+```bash
+railway deployment list --service FuturaTecno --environment production --json
+```
+`railway variable list` imprime los secretos en crudo: filtrar siempre con `grep` antes de mostrar la salida.
+
 **Dominio:**
-- `futuratecno.com.ar` — **registrado** en NIC.ar (dominio "especial" pago; vence 2027-07-16). Falta **delegar el DNS** (todavía sin nameservers) para apuntarlo a Railway.
+- `futuratecno.com.ar` — **en producción** desde 2026-07-19: apex y `www` con SSL, el apex redirige 301 a `www`. Registrado en NIC.ar (dominio "especial" pago; vence 2027-07-16).
 - `futuratecno.com` — **NO es nuestro**: pertenece a un tercero (registrado en 2018 vía Bluehost, apuntando a Wix). No usar ni asumir disponibilidad.
